# Club-Ploot-SC

./: CMakeLists.txt  archived_code.txt  cp_main.cpp  dummy.ploot
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
ClubPloot/: CMakeLists.txt  README.txt  login_sceen.cpp  login_sceen.h  login_sceen.ui  login_screen.cpp  login_screen.h  login_screen.ui  main.cpp  moon_river.cpp  moon_river.h  moon_river.ui  ploot.cpp  ploot.h  ploot_select.cpp  ploot_select.h  ploot_select.ui  startmenu.cpp  startmenu.h  startmenu.ui
ClubPloot/resources/: img-resources.qrc
resources/: img_resource.qrc
src/: cp_main.cpp  mainmenu.h  mainmenu.ui  moon_river.h  moon_river.ui  ui_mainmenu.h
src_old/: cp_main.cpp  ploot.cpp  ploot.h
